--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="wrapper__img">
-        <img src="images/image-qr-code.png" alt="QR Code" />
-      </div>
-      <div class="wrapper__text">
-        <h1>Improve your front-end skills by building projects</h1>
+    <div class="background">
+      <div class="wrapper">
+        <div>
+          <img src="images/image-qr-code.png" alt="QR Code" />
+        </div>
+        <div class="wrapper__text">
+          <h1>Improve your front-end skills by building projects</h1>
 
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
     </div>
   </body>
